# mauns

./: .dockerignore  .gitattributes  .gitignore  .npmignore  .npmrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  docker-setup.sh  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI.yml  release.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
crates/agents/: Cargo.toml
crates/agents/src/: confirmation.rs  context_loader.rs  executor.rs  git_orchestrator.rs  lib.rs  memory.rs  pipeline.rs  planner.rs  verifier.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  error_handler.rs  lib.rs  output.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  loader.rs  schema.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  project.rs  types.rs
crates/filesystem/: Cargo.toml
crates/filesystem/src/: diff.rs  guard.rs  ignore.rs  lib.rs  ops.rs  tracker.rs
crates/git/: Cargo.toml
crates/git/src/: branch.rs  commit.rs  lib.rs  repo.rs  safety.rs
crates/github/: Cargo.toml
crates/github/src/: client.rs  lib.rs  pr.rs
crates/llm/: Cargo.toml
crates/llm/src/: anthropic.rs  deterministic.rs  groq.rs  lib.rs  local.rs  openai.rs  provider.rs  registry.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: lib.rs  plugin.rs  registry.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: builder.rs  lib.rs
crates/session/: Cargo.toml
crates/session/src/: commands.rs  display.rs  history.rs  lib.rs  runner.rs  state.rs
crates/skills/: Cargo.toml
crates/skills/src/: lib.rs  registry.rs  skill.rs  skillset.rs
crates/skills/src/builtin/: dir_list.rs  file_read.rs  file_write.rs  mod.rs
helm/mauns/: Chart.yaml  values.yaml
helm/mauns/templates/: _helpers.tpl  deployment.yaml
scripts/: install.js
