[package]
name    = "mauns"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "mauns"
path = "src/main.rs"

[dependencies]
mauns-core       = { path = "../../crates/core" }
mauns-llm        = { path = "../../crates/llm" }
mauns-agents     = { path = "../../crates/agents" }
mauns-config     = { path = "../../crates/config" }
mauns-filesystem = { path = "../../crates/filesystem" }
mauns-session    = { path = "../../crates/session" }
tokio              = { workspace = true }
tracing-subscriber = { workspace = true }
