[package]
name    = "mauns-agents"
version = "0.1.1"
edition = "2021"

[dependencies]
mauns-core       = { path = "../core" }
mauns-llm        = { path = "../llm" }
mauns-filesystem = { path = "../filesystem" }
mauns-git        = { path = "../git" }
mauns-github     = { path = "../github" }
mauns-skills     = { path = "../skills" }
async-trait      = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
anyhow           = { workspace = true }
tokio            = { workspace = true }
tracing          = { workspace = true }
chrono           = { workspace = true }
git2             = { workspace = true }
