[package]
name    = "mauns-core"
version = "0.2.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
chrono      = { workspace = true }
reqwest     = { workspace = true }
