[package]
name    = "mauns-git"
version = "0.2.0"
edition = "2021"

[dependencies]
mauns-core       = { path = "../core" }
mauns-filesystem = { path = "../filesystem" }
git2             = { workspace = true }
chrono           = { workspace = true }
tracing          = { workspace = true }
serde            = { workspace = true }
