[package]
name    = "mauns-llm"
version = "0.2.0"
edition = "2021"

[dependencies]
mauns-core   = { path = "../core" }
mauns-config = { path = "../config" }
async-trait  = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
reqwest     = { workspace = true }
anyhow      = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
