[package]
name    = "mauns-sdk"
version = "0.2.0"
edition = "2021"

[dependencies]
mauns-core    = { path = "../core" }
mauns-llm     = { path = "../llm" }
mauns-agents  = { path = "../agents" }
mauns-config  = { path = "../config" }
mauns-skills  = { path = "../skills" }
tokio         = { workspace = true }
tracing       = { workspace = true }
