[package]
name    = "mauns-skills"
version = "0.1.1"
edition = "2021"

[dependencies]
mauns-core       = { path = "../core" }
mauns-filesystem = { path = "../filesystem" }
async-trait      = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
tokio            = { workspace = true }
tracing          = { workspace = true }
chrono           = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
